--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "env": {
     "browser": true,
     "commonjs": true,
-    "es2021": true
+    "es2021": true,
+    "es6": true,
+    "jquery": true
   },
   "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
